--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,26 @@
+@article{Goldwasser1989,
+  title     = {The Knowledge Complexity of Interactive Proof Systems},
+  volume    = {18},
+  issn      = {1095-7111},
+  url       = {http://dx.doi.org/10.1137/0218012},
+  doi       = {10.1137/0218012},
+  number    = {1},
+  journal   = {SIAM Journal on Computing},
+  publisher = {Society for Industrial & Applied Mathematics (SIAM)},
+  author    = {Goldwasser,  Shafi and Micali,  Silvio and Rackoff,  Charles},
+  year      = {1989},
+  month     = feb,
+  pages     = {186-208}
+} 
+
+@misc{ButerinIncompleteGuide,
+  author       = {},
+  title        = { {A}n incomplete guide to stealth addresses  --- vitalik.eth.limo},
+  howpublished = {\url{https://vitalik.eth.limo/general/2023/01/20/stealth.html}},
+  year         = {},
+  note         = {[Accessed 12-12-2023]}
+}
+
 @unpublished{coplienOredevDCI,
   author = {Coplien, James},
   title  = {{The DCI Architecture: Supporting the Agile Agenda}},
