--- a/pages/annotation.tex
+++ b/pages/annotation.tex
@@ -6,24 +6,38 @@
 \section*{Anotácia}
 
 \begin{minipage}[t]{1\columnwidth}
-\FIITuniversitySK
+    \FIITuniversitySK
 
-\FIITfacultySK
+    \FIITfacultySK
 
-Študijný program: \FIITstudyProgramSK\\
+    Študijný program: \FIITstudyProgramSK\\
 
-Autor: \FIITauthor
+    Autor: \FIITauthor
 
-\FIITthesisSK: \FIITtitleSK
+    \FIITthesisSK: \FIITtitleSK
 
-Vedúci projektu: \FIITsupervisor
+    Vedúci projektu: \FIITsupervisor
 
-\FIITdateSK
+    \FIITdateSK
 \end{minipage}
 
 \bigskip{}
 
-\lipsum[2]
+Bakalárska práca skúma aplikáciu dôkazov s nulovým vedomím (ZKPs) v
+blockchaine. Dôkazy s nulovým vedomím sú kryptografická metóda, ktorá
+umožňuje overenie dát bez odhalenia samotných dát, čo je ideálne pre bezpečné
+a súkromné aplikácie v blockchainoch. Táto práca je zameraná na návrh
+a implementáciu konceptu schémy tajne adresy s použitím ZKPs. Táto schéma
+umožňuje odosielateľom odvodiť tajnú adresu z verejných údajov príjemcu.
+Iba príjemca má kontrolu nad touto adresou, a zaroveň neodhaľuje žiadne informácie
+o tom, kto príjemca je.
+
+Výskum zahŕňa analýzu kryptografických princípov za ZKPs, nasledovanú
+vysvetlením návrhu schémy tajne adresy a jej integráciou do blockchainu Ethereum.
+
+Táto práca prispieva do oblasti ukázaním, ako možno využiť ZKPs v blockchaine
+na riešenie problémov súkromia, ponúkajúc riešenie vo forme konceptuálnej
+implementácie schémy tajne adresy s použitím ZKPs.
 
 \newpage{}\thispagestyle{empty}\medskip{}
 
@@ -37,24 +51,40 @@ Vedúci projektu: \FIITsupervisor
 \section*{Annotation}
 
 \begin{minipage}[t]{1\columnwidth}
-\FIITuniversity
+    \FIITuniversity
 
-\FIITfaculty
+    \FIITfaculty
 
-Degree Course: \FIITstudyProgram\\
+    Degree Course: \FIITstudyProgram\\
 
-Author: \FIITauthor
+    Author: \FIITauthor
 
-\FIITthesis: \FIITtitle
+    \FIITthesis: \FIITtitle
 
-Supervisor: \FIITsupervisor
+    Supervisor: \FIITsupervisor
 
-\FIITdate
+    \FIITdate
 \end{minipage}
 
 \bigskip{}
 
-\lipsum[1]
+This bachelor's thesis investigates the application of Zero Knowledge Proofs
+(ZKPs) in blockchains. Zero Knowledge Proofs are a cryptographic
+method which enables the validation of data without revealing the
+data itself, making it ideal for secure and private applications in
+blockchain networks. The focus of this thesis is the design and implementation
+of a proof of concept Stealth Address scheme using ZKPs. This scheme allows any sender to
+derive a stealth address from recipients public data. Only the recipient has
+control over this address, yet it does not leak any information about who the
+recipient is.
+
+The research includes an analysis of the cryptographic principles behind
+ZKPs, followed by a explanation of the Stealth Address scheme's design and
+its integration into a an Ethereum blockchain.
+
+This thesis contributes to the field by showcasing how ZKPs can be utilized
+in blockchain to address privacy concerns, offering a solution in the form of
+a proof of concept  implementation of Stealth Address scheme using ZKPs.
 
 \newpage{}\thispagestyle{empty}
 
