--- a/values.tex
+++ b/values.tex
@@ -15,14 +15,14 @@
 \newcommand{\FIITfacultySK}[0] {Fakulta informatiky a informačných technológií}
 \newcommand{\FIITthesis}[0] {Bachelor's thesis}
 \newcommand{\FIITthesisSK}[0] {Bakalárska práca}
-\newcommand{\FIITtitle}[0] {Very important project}
+\newcommand{\FIITtitle}[0] {Practical usage of Zero-knowledge in different use-cases in blockchains}
 \newcommand{\FIITtitleSK}[0] {Velmi dolezity projekt}
-\newcommand{\FIITauthor}[0] {Jano Mrkvicka}
-\newcommand{\FIITsupervisor}[0] {Peter Bandur}
-\newcommand{\FIITevidenceNumber}[0] {FIIT-XXXX-XXXXX}
-\newcommand{\FIITdate}[0] {May 2019}
-\newcommand{\FIITdateSK}[0] {Máj 2019}
-\newcommand{\FIITstudyProgram}[0] {Information Security}
+\newcommand{\FIITauthor}[0] {Lukáš Častven}
+\newcommand{\FIITsupervisor}[0] {Ing. Kristián Košťál PhD.}
+\newcommand{\FIITevidenceNumber}[0] {FIIT-16768-116160}
+\newcommand{\FIITdate}[0] {December 2023}
+\newcommand{\FIITdateSK}[0] {December 2023}
+\newcommand{\FIITstudyProgram}[0] {Informatics}
 \newcommand{\FIITstudyProgramSK}[0] {Informačná bezpečnosť}
 \newcommand{\FIITstudyField}[0] {Computer Science}
 \newcommand{\FIITdegreeCourseSK}[0] {9.2.1 Informatika}
@@ -30,5 +30,5 @@
 \newcommand{\FIITinstituteSK}[0] {Ústav počítačového inžinierstva a aplikovanej informatiky}
 \newcommand{\FIITsignPlace}[0] {In Bratislava, }
 \newcommand{\FIITsignPlaceSK}[0] {V Bratislave, }
-\newcommand{\FIITsignDate}[0] {8.2.2020}
-\newcommand{\FIITArchiveName}[0] {BP\_prilohy\_digital\_JanoMrkvicka.zip}
+\newcommand{\FIITsignDate}[0] {25.12.2023}
+\newcommand{\FIITArchiveName}[0] {BP\_LukasCastven.zip}
