--- a/bibliography.bib
+++ b/bibliography.bib
@@ -13,12 +13,39 @@
   pages     = {186-208}
 } 
 
+@inbook{Fiat,
+  title     = {How To Prove Yourself: Practical Solutions to Identification and Signature Problems},
+  isbn      = {9783540180470},
+  url       = {http://dx.doi.org/10.1007/3-540-47721-7_12},
+  doi       = {10.1007/3-540-47721-7_12},
+  booktitle = {Lecture Notes in Computer Science},
+  publisher = {Springer Berlin Heidelberg},
+  author    = {Fiat,  Amos and Shamir,  Adi},
+  pages     = {186-194}
+}
+
 @misc{ButerinIncompleteGuide,
   author       = {},
   title        = { {A}n incomplete guide to stealth addresses  --- vitalik.eth.limo},
   howpublished = {\url{https://vitalik.eth.limo/general/2023/01/20/stealth.html}},
   year         = {},
   note         = {[Accessed 12-12-2023]}
+}
+
+@misc{youtubeMOOCLecture1,
+  author       = {},
+  title        = {{Z}{K}{P} {M}{O}{O}{C} {L}ecture 1: {I}ntroduction and {H}istory of {Z}{K}{P} --- youtube.com},
+  howpublished = {\url{https://www.youtube.com/watch?v=uchjTIlPzFo&list=PLS01nW3Rtgor_yJmQsGBZAg5XM4TSGpPs}},
+  year         = {},
+  note         = {[Accessed 16-12-2023]}
+}
+
+@misc{youtuMOOCLecture2,
+  author       = {},
+  title        = {{Z}{K}{P} {M}{O}{O}{C} {L}ecture 2: {O}verview of {M}odern {S}{N}{A}{R}{K} {C}onstructions --- youtube.com},
+  howpublished = {\url{https://youtu.be/bGEXYpt3sj0?si=WionmSWqXZdgi9lM}},
+  year         = {},
+  note         = {[Accessed 16-12-2023]}
 }
 
 @unpublished{coplienOredevDCI,
