--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,7 @@
 \include{initialize}
 
 % TODO https://www.fiit.stuba.sk/buxus/docs/organizacia_studia/pokyny/ZP-clenenie-pokyny_2022.pdf
+%   https://www.fiit.stuba.sk/studium/bakalarsky-projekt/bp.html?page_id=1862
 % Cover & title page
 \include{pages/titlepage}
 
@@ -46,7 +47,6 @@
 % \include{pages/acknowledgements}
 
 % Annotation
-% TODO add slovak
 \include{pages/annotation}
 
 % Table of contents
@@ -77,7 +77,7 @@
     \include{content/introduction}
     \emptypage
 
-    \include{content/chapter2}
+    \include{content/analysis}
     \emptypage
 
     \include{content/chapter3}
