--- a/packages.tex
+++ b/packages.tex
@@ -31,6 +31,7 @@
 \usepackage{minted}
 \usepackage{tikz}
 \usepackage{tocloft}
+\usepackage{amsfonts}
 
 % Remove unnecessary gap between paragraph if large figure is inserted after them
 \raggedbottom
