non-interactive proofs

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -13,6 +13,29 @@
   pages     = {186-208}
 } 
 
+@article{goldreich1991proofs,
+  title     = {Proofs that yield nothing but their validity or all languages in NP have zero-knowledge proof systems},
+  author    = {Goldreich, Oded and Micali, Silvio and Wigderson, Avi},
+  journal   = {Journal of the ACM (JACM)},
+  volume    = {38},
+  number    = {3},
+  pages     = {690--728},
+  year      = {1991},
+  publisher = {ACM New York, NY, USA}
+}
+
+@inproceedings{Goldwasser1986,
+  series     = {STOC ’86},
+  title      = {Private coins versus public coins in interactive proof systems},
+  url        = {http://dx.doi.org/10.1145/12130.12137},
+  doi        = {10.1145/12130.12137},
+  booktitle  = {Proceedings of the eighteenth annual ACM symposium on Theory of computing  - STOC ’86},
+  publisher  = {ACM Press},
+  author     = {Goldwasser,  S and Sipser,  M},
+  year       = {1986},
+  collection = {STOC ’86}
+}
+
 @inbook{Fiat,
   title     = {How To Prove Yourself: Practical Solutions to Identification and Signature Problems},
   isbn      = {9783540180470},
@@ -22,6 +45,21 @@
   publisher = {Springer Berlin Heidelberg},
   author    = {Fiat,  Amos and Shamir,  Adi},
   pages     = {186-194}
+}
+
+@article{Babai1988,
+  title     = {Arthur-Merlin games: A randomized proof system,  and a hierarchy of complexity classes},
+  volume    = {36},
+  issn      = {0022-0000},
+  url       = {http://dx.doi.org/10.1016/0022-0000(88)90028-1},
+  doi       = {10.1016/0022-0000(88)90028-1},
+  number    = {2},
+  journal   = {Journal of Computer and System Sciences},
+  publisher = {Elsevier BV},
+  author    = {Babai,  László and Moran,  Shlomo},
+  year      = {1988},
+  month     = apr,
+  pages     = {254-276}
 }
 
 @misc{ButerinIncompleteGuide,
@@ -48,6 +86,7 @@
   note         = {[Accessed 16-12-2023]}
 }
 
+%%
 @unpublished{coplienOredevDCI,
   author = {Coplien, James},
   title  = {{The DCI Architecture: Supporting the Agile Agenda}},
