--- a/pages/abbreviations.tex
+++ b/pages/abbreviations.tex
@@ -10,9 +10,11 @@
 \vskip 1cm
 
 \begin{tabular}{ >{\bfseries}m{2cm} m{10cm} }
-    EVM & Ethereum Virtual Machine \\
-    ZK  & Zero Knowledge           \\
-    ZKP & Zero Knowledge Proof
+	AC  & Arithmetic Circuit       	\\
+	EVM & Ethereum Virtual Machine 	\\
+	R1CS & Rank-1 Constraint System \\
+	ZK  & Zero Knowledge           	\\
+	ZKP & Zero Knowledge Proof
     % API		& Application Programming Interface \\
     % AWS		& Amazon Web Services \\
     % CNAME	& Canonical Name record \\
