--- a/main.tex
+++ b/main.tex
@@ -80,16 +80,16 @@
     \include{content/analysis}
     \emptypage
 
-    \include{content/chapter3}
-    \emptypage
-
-    \include{content/chapter4}
-    \emptypage
-
-    \include{content/chapter5}
-    \emptypage
-
-    \include{content/chapter6}
+    % \include{content/chapter3}
+    % \emptypage
+    %
+    % \include{content/chapter4}
+    % \emptypage
+    %
+    % \include{content/chapter5}
+    % \emptypage
+    %
+    % \include{content/chapter6}
 
     \ifx\FIITlagEN\undefined
     \else
