--- a/content/appendix1.tex
+++ b/content/appendix1.tex
@@ -1,55 +1,31 @@
 \setcounter{figure}{0}
 \setcounter{listing}{0}
 
-\chapter{Špecifikácia API rozhrania}
-\label{appendix:API}
+\chapter{Polynomial zero test}
+\label{appendix:zero_test}
 \pagenumbering{arabic}
 \renewcommand*{\thepage}{A-\arabic{page}}
 
 \begin{refsegment}
 
-\par This is the application programming interface
+The polynomial zero test is at the heart of the SNARK construction. Given a
+polynomial $f \in \mathbb{F}_p^{\leq d}[X]$, the probability that a random
+element $x \in \mathbb{F}_p$ is a root of $f$ is $d/p$.
 
-\par \lipsum{10}
+\[ \Pr[f(x) = 0] \leq \frac{d}{p} \]
 
-\section{Endpointy}
+For example, $p = 2^{256}$ and $d = 2^{32}$, the probability that a random
+element $x \in \mathbb{F}_p$ is a root of $f$ is $2^{224}$. This is a negligible
+probability, and we can assume that $f$ is zero polynomial with high
+probability when $f(x) = 0$ for a random $x \in \mathbb{F}_p$.
 
-\begin{itemize}
-  \item v1 - API version 1
-  \item v2 - API version 2
-  \item test - API placeholder
-\end{itemize}
+The generalization of the polynomial zero test for multivariate polynomials is
+known as \textit{SZDL lemma}.
 
-\section{Cesty}
+This can be used to prove that two polynomials are equal. Given two polynomials
+$f, g$, we can evaluate $h = f - g$ at a random point $x$. If $h(x) = 0$, then
+$f(x) - g(x) = 0 \Longrightarrow f(x) = g(x) \Longrightarrow f = g$ with high probability.
 
-\begin{itemize}
-  \item \hyperref[section:auth]{A.2.1 Auth}
-  \item \hyperref[section:music]{A.2.2 Music}
-  \item \hyperref[section:pictures]{A.2.3 Pictures}
-  \item \hyperref[section:video]{A.2.4 Video}
-  \item \hyperref[section:mail]{A.2.5 Mail}
-\end{itemize}
-
-\subsection{Auth}
-\label{section:auth}
-
-
-\subsection{Music}
-\label{section:music}
-
-
-\subsection{Pictures}
-\label{section:pictures}
-
-
-\subsection{Video}
-\label{section:video}
-
-
-\subsection{Mail}
-\label{section:mail}
-
-% Bibliography
 \printbibliography[heading=referencessec,segment=\therefsegment,resetnumbers=true]
 
 \end{refsegment}
