stealth addresses and finish analysis

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -86,6 +86,15 @@
   note         = {[Accessed 16-12-2023]}
 }
 
+@misc{ToddStealthAddresses,
+	author 			= {},
+	title 			= { [{B}itcoin-development] {S}tealth {A}ddresses  --- lists.linuxfoundation.org},
+	howpublished	= {\url{https://lists.linuxfoundation.org/pipermail/bitcoin-dev/2014-January/004020.html}},
+	year 			= {},
+	note 			= {[Accessed 19-12-2023]},
+}
+
+
 %%
 @unpublished{coplienOredevDCI,
   author = {Coplien, James},
