add references to appendix 1

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -62,6 +62,49 @@
   pages     = {254-276}
 }
 
+@article{Schwartz1980,
+  title 	= {Fast Probabilistic Algorithms for Verification of Polynomial Identities},
+  volume 	= {27},
+  ISSN 		= {1557-735X},
+  url 		= {http://dx.doi.org/10.1145/322217.322225},
+  DOI 		= {10.1145/322217.322225},
+  number 	= {4},
+  journal 	= {Journal of the ACM},
+  publisher = {Association for Computing Machinery (ACM)},
+  author 	= {Schwartz,  J. T.},
+  year 		= {1980},
+  month		= oct,
+  pages		= {701–717}
+}
+
+@inbook{Zippel1979,
+  title 	= {Probabilistic algorithms for sparse polynomials},
+  ISBN 		= {9783540351283},
+  ISSN 		= {1611-3349},
+  url 		= {http://dx.doi.org/10.1007/3-540-09519-5_73},
+  DOI 		= {10.1007/3-540-09519-5_73},
+  booktitle = {Lecture Notes in Computer Science},
+  publisher = {Springer Berlin Heidelberg},
+  author 	= {Zippel,  Richard},
+  year 		= {1979},
+  pages 	= {216–226}
+}
+
+@article{Demillo1978,
+  title 	= {A probabilistic remark on algebraic program testing},
+  volume 	= {7},
+  ISSN 		= {0020-0190},
+  url 		= {http://dx.doi.org/10.1016/0020-0190(78)90067-4},
+  DOI 		= {10.1016/0020-0190(78)90067-4},
+  number 	= {4},
+  journal 	= {Information Processing Letters},
+  publisher = {Elsevier BV},
+  author 	= {Demillo,  Richard A. and Lipton,  Richard J.},
+  year 		= {1978},
+  month 	= jun,
+  pages 	= {193–195}
+}
+
 @misc{ButerinIncompleteGuide,
   author       = {},
   title        = { {A}n incomplete guide to stealth addresses  --- vitalik.eth.limo},
