--- a/main.tex
+++ b/main.tex
@@ -80,9 +80,9 @@
     \include{content/analysis}
     \emptypage
 
-    % \include{content/chapter3}
-    % \emptypage
-    %
+    \include{content/design}
+    \emptypage
+
     % \include{content/chapter4}
     % \emptypage
     %
